Adding other files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="relative h-screen">
 
         <!-- Your hero content goes here -->
-        <img src="C:\Users\jason\OneDrive\Desktop\Website\jplatte23.github.io\background.jpg" alt="Jason Platte" class="object-cover w-full h-full">
+        <img src="background.jpg" alt="Jason Platte" class="object-cover w-full h-full">
 
         <!-- Content Centered on the Hero Section -->
         <div class="absolute inset-0 flex flex-col items-center justify-center text-white bg-black bg-opacity-50">
@@ -37,7 +37,7 @@
         <section class="py-16 mx-4 bg-gray-100">
             <div class="container mx-auto flex items-center justify-center flex-col">
                 <!-- Photo of Myself -->
-                <img src="C:\Users\jason\OneDrive\Desktop\Website\jplatte23.github.io\headshot.jpg" alt="Your Name" class="rounded-full w-32 h-32 mb-4">
+                <img src="headshot.jpg" alt="Your Name" class="rounded-full w-32 h-32 mb-4">
 
                 <h2 class="text-2xl font-bold mb-8">About Me</h2>
                 <p class="text-gray-700">I am a Computer Science Games student at the University of Southern California. I am a FIRST alum, and I also play for the Varsity Overwatch team. My interest lies in game development particularly gameplay engineering or technical design. I am proficient in various programming languages and game development frameworks. I enjoy creative thinking, level design, and all types of games. My all time favorites are Wizard101, Ark Survival Evolved, Destiny, Overwatch, ESO, Borderlands, Halo, and I am a huge fan of Indie Horror. </p>
@@ -101,8 +101,8 @@
                 <h4 class="text-md font-bold mt-4 mb-2">Screenshots:</h4>
                 <!-- Add your screenshots here -->
                 <div class="grid grid-cols-2 gap-4">
-                    <img src="C:\Users\jason\OneDrive\Desktop\Website\jplatte23.github.io\ss1.png" alt="Screenshot 1" class="w-full rounded">
-                    <img src="C:\Users\jason\OneDrive\Desktop\Website\jplatte23.github.io\ss4.png" alt="Screenshot 2" class="w-full rounded">
+                    <img src="ss1.png" alt="Screenshot 1" class="w-full rounded">
+                    <img src="ss4.png" alt="Screenshot 2" class="w-full rounded">
                 </div>
             </div>
         </div>
