Adding other files

--- a/index.html
+++ b/index.html
@@ -111,16 +111,20 @@
 
 
     <!-- Contact Section -->
+    <!-- Contact Section -->
     <div style="background-color: rgb(20, 20, 20);">
         <section class="py-16 mx-4 bg-custom-color">
             <!-- Contact Section -->
             <div class="container mx-auto">
-              <h2 class="text-2xl font-bold mb-8" style="color: rgb(53, 168, 65)">Contact</h2>
-                <p class="text-gray-100">Feel free to reach out to me or connect with me on LinkedIn. I am open to collaboration and always excited to discuss new opportunities.</p>
-                <a href="https://www.linkedin.com/in/jason-platte-7981bb261/" target="_blank" class="text-blue-500 hover:text-blue-300">                            <i class="fab fa-linkedin fa-4x"></i>
+                <h2 class="text-2xl font-bold mb-8" style="color: rgb(53, 168, 65)">Contact</h2>
+                <p class="text-gray-100">Feel free to connect with me on LinkedIn. I am open to collaboration and always excited to discuss new opportunities.</p>
+                <a href="https://www.linkedin.com/in/jason-platte-7981bb261/" target="_blank" class="text-blue-500 hover:text-blue-300">
+                    <i class="fab fa-linkedin fa-4x"></i>
                 </a>
+            </div>
         </section>
     </div>
+
 
 
     <!-- Footer Section -->
