Adding other files

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <li>Collaborated with Berklee College of Music to implement unique sounds</li>
                 </ul>
                 <!-- Link to itch.io -->
-                <a href="https://itch.io/your-game-link" target="_blank" class="text-blue-500 hover:underline block mt-4">Visit itch.io</a>
+                <a href="https://avelichkov.itch.io/the-bookstore" target="_blank" class="text-blue-500 hover:underline block mt-4">Visit itch.io</a>
                 <!-- Screenshots -->
                 <h4 class="text-md font-bold mt-4 mb-2">Screenshots:</h4>
                 <!-- Add your screenshots here -->
