--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                 <!-- Screenshots -->
                 <h4 class="text-md font-bold mt-4 mb-s2">Screenshots:</h4>
                 <div class="grid grid-cols-2 gap-4">
-                    <img src="ss5.png" alt="Screenshot 1" class="w-full rounded">
-                    <img src="ss6.png" alt="Screenshot 2" class="w-full rounded">
+                    <img src="ss5.PNG" alt="Screenshot 1" class="w-full rounded">
+                    <img src="ss6.PNG" alt="Screenshot 2" class="w-full rounded">
                 </div>
             </div>
         </div>
