updating code page

--- a/about.html
+++ b/about.html
@@ -61,6 +61,9 @@
                     <a href="mailto:jasonplatte@hotmail.com" class="text-red-400 hover:text-red-300">
                         <i class="fas fa-envelope fa-2x"></i>
                     </a>
+                    <a href="https://github.com/jplatte23" target="_blank" class="text-gray-400 hover:text-white">
+                        <i class="fab fa-github fa-2x"></i>
+                    </a>
                 </div>
             </div>
 
