--- a/code.html
+++ b/code.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>Jason Platte Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -22,6 +24,32 @@
             <a href="about.html" class="hover:text-white">About</a>
         </nav>
     </header>
+
+    <section class="py-16 px-6 max-w-7xl mx-auto">
+        <h2 class="text-3xl font-bold mb-8 text-green-400">Github Links</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <!-- Example GitHub Link -->
+                <a href="https://github.com/jplatte23/BookstoreCodeSamples" target="_blank" class="flex items-center space-x-3 text-gray-300 hover:text-white text-xl">
+                    <i class="fab fa-github fa-2x"></i>
+                    <span>The Bookstore Code Samples</span>
+                </a>
+
+                <a href="https://github.com/jplatte23/DeepContainmentCodeSamples" target="_blank" class="flex items-center space-x-3 text-gray-300 hover:text-white text-xl">
+                    <i class="fab fa-github fa-2x"></i>
+                    <span>Deep Containment Code Samples</span>
+                </a>
+
+                <a href="https://github.com/jplatte23/TroTriviaCodeSamples" target="_blank" class="flex items-center space-x-3 text-gray-300 hover:text-white text-xl">
+                    <i class="fab fa-github fa-2x"></i>
+                    <span>TroTrivia Code Samples</span>
+                </a>
+
+                <a href="https://github.com/jplatte23/AHCodeSamples" target="_blank" class="flex items-center space-x-3 text-gray-300 hover:text-white text-xl">
+                    <i class="fab fa-github fa-2x"></i>
+                    <span>Art House Code Samples</span>
+                </a>
+            </div>
+    </section>
 
     <!-- Footer -->
     <footer class="text-center py-6 border-t border-gray-700 text-sm text-gray-500">
