--- a/about.html
+++ b/about.html
@@ -31,13 +31,11 @@
 
                 <h2 class="text-3xl font-bold mb-6 text-green-400">About Me</h2>
                 <p class="text-white text-xl font-semibold mb-2">
-                    Hi I am Jason Platte. I am a recent graduate in my early career looking for entry level software engineering or game development positions. I prefer locations closer to my family
+                    Hi I am Jason Platte. I am a recent graduate in my early career looking for entry level SWE or Game Development positions. I prefer locations closer to my family
                     in Northern California but I am open to opportunities further away as well!
                 </p>
                 <p class="text-white text-xl font-semibold mb-2">
-                    In my free time I like to play competitive overwatch, 3D print, go to the gym, and do water sports. I am currently working on building up my skills and resume by making a game with my recently graduated peers. I also
-                    plan to learn Lua and work on a roblox game this Summer for fun. Some of my all time favorite games include Ark, Overwatch, Wizard101, Destiny, Halo Reach, Elden Ring, Escape the Backrooms, and ESO. I am also really enjoying Last Flag
-                    right now as a pre-alpha playtester and I am really rooting for their success.
+                    In my free time I like to play competitive overwatch, do 3D printing, and learn new skills. I am currently working on passion projects with my recently graduated peers. Some of my all time favorite games include Ark, Overwatch, Wizard101, Destiny, Halo Reach, Elden Ring, Escape the Backrooms, and ESO. 
                 </p>
             </div>
         </div>
