--- a/code.html
+++ b/code.html
@@ -29,6 +29,11 @@
         <h2 class="text-3xl font-bold mb-8 text-green-400">Github Links</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Example GitHub Link -->
+                <a href="https://github.com/jplatte23/SummitCodeSamples" target="_blank" class="flex items-center space-x-3 text-gray-300 hover:text-white text-xl">
+                    <i class="fab fa-github fa-2x"></i>
+                    <span>Summit Code Samples</span>
+                </a>
+
                 <a href="https://github.com/jplatte23/BookstoreCodeSamples" target="_blank" class="flex items-center space-x-3 text-gray-300 hover:text-white text-xl">
                     <i class="fab fa-github fa-2x"></i>
                     <span>The Bookstore Code Samples</span>
