--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
             <!-- Project Card -->
+            <a href="summit.html" class="block bg-gray-800 rounded overflow-hidden hover:shadow-lg hover:scale-[1.02] transition">
+                <img src="ss15.png" alt="Summit" class="w-full h-48 object-cover">
+                <div class="p-4">
+                    <h3 class="text-xl font-semibold">Summit</h3>
+                    <p class="text-gray-400 text-sm">2025 - Roblox Studio|Lua</p>
+                </div>
+            </a>
+
             <a href="bookstore.html" class="block bg-gray-800 rounded overflow-hidden hover:shadow-lg hover:scale-[1.02] transition">
                 <img src="ss7.jpg" alt="The Bookstore" class="w-full h-48 object-cover">
                 <div class="p-4">
