--- a/arthouse.html
+++ b/arthouse.html
@@ -10,6 +10,10 @@
         body {
             font-family: 'Inter', sans-serif;
         }
+        .nav-glow:hover {
+            text-shadow: 0 0 12px rgba(52, 211, 153, 0.6);
+            color: white;
+        }
     </style>
 </head>
 <body class="bg-black text-white">
@@ -17,9 +21,9 @@
     <header class="py-8 text-center" style="background-color: #202123;">
         <h1 class="text-2xl font-extrabold tracking-wide">Jason Platte</h1>
         <nav class="mt-4 flex justify-center space-x-8 text-4xl text-gray-500">
-            <a href="index.html" class="hover:text-white">Games</a>
-            <a href="code.html" class="hover:text-white">Code</a>
-            <a href="about.html" class="hover:text-white">About</a>
+            <a href="index.html" class="nav-glow">Games</a>
+            <a href="code.html" class="nav-glow">Code</a>
+            <a href="about.html" class="nav-glow">About</a>
         </nav>
     </header>
 
@@ -36,7 +40,7 @@
                 <p>
                     In Art House, step into the life of Lisa, mother to Ollie and Zoe, who's struggling to pick up the pieces of her life after the passing of her mother,
                     Betty. After returning to Betty's mountain home, Lisa and her kids get trapped inside of Betty's paintings where her memories come to life. Guide Lisa
-                    through hauntingly beautiful paintings while solving puzzles and confronting the shadows of the family’s past. Navigate a journey through grief and towards
+                    through hauntingly beautiful paintings while solving puzzles and confronting the shadows of the familyï¿½s past. Navigate a journey through grief and towards
                     healing that lingers after the final brushstroke. This was a year long Unity project made by a team of over 30 people including a 5 person engineering team I was part of.
                 </p>
             </div>
