--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
         body {
             font-family: 'Inter', sans-serif;
         }
+
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+
+        .nav-glow:hover {
+            text-shadow: 0 0 12px rgba(52, 211, 153, 0.6);
+            color: white;
+        }
+
+        /* Purple outline + glow for cards */
+        .glow-card {
+            border: 1px solid rgba(52, 211, 153, 0.25); /* subtle slate */
+            transition: transform 200ms ease, box-shadow 200ms ease, border-color 200ms ease;
+        }
+
+            .glow-card:hover {
+                border-color: rgba(52, 211, 153, 0.85);
+                box-shadow: 0 0 0 1px rgba(52, 211, 153, 0.18), 0 0 18px rgba(52, 211, 153, 0.35), 0 0 48px rgba(52, 211, 153, 0.22);
+                transform: translateY(-4px) scale(1.02);
+            }
     </style>
 </head>
 <body class="bg-black text-white">
@@ -17,9 +38,9 @@
     <header class="py-8 text-center" style="background-color: #202123;">
         <h1 class="text-2xl font-extrabold tracking-wide">Jason Platte</h1>
         <nav class="mt-4 flex justify-center space-x-8 text-4xl text-gray-500">
-            <a href="index.html" class="hover:text-white">Games</a>
-            <a href="code.html" class="hover:text-white">Code</a>
-            <a href="about.html" class="hover:text-white">About</a>
+            <a href="index.html" class="nav-glow">Games</a>
+            <a href="code.html" class="nav-glow">Code</a>
+            <a href="about.html" class="nav-glow">About</a>
         </nav>
     </header>
 
@@ -29,7 +50,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
             <!-- Project Card -->
-            <a href="summit.html" class="block bg-gray-800 rounded overflow-hidden hover:shadow-lg hover:scale-[1.02] transition">
+            <a href="summit.html" class="glow-card block bg-gray-800 rounded overflow-hidden">
                 <img src="ss15.png" alt="Summit" class="w-full h-48 object-cover">
                 <div class="p-4">
                     <h3 class="text-xl font-semibold">Summit</h3>
@@ -37,7 +58,7 @@
                 </div>
             </a>
 
-            <a href="bookstore.html" class="block bg-gray-800 rounded overflow-hidden hover:shadow-lg hover:scale-[1.02] transition">
+            <a href="bookstore.html" class="glow-card block bg-gray-800 rounded overflow-hidden">
                 <img src="ss7.jpg" alt="The Bookstore" class="w-full h-48 object-cover">
                 <div class="p-4">
                     <h3 class="text-xl font-semibold">The Bookstore</h3>
@@ -45,7 +66,7 @@
                 </div>
             </a>
 
-            <a href="deepcontainment.html" class="block bg-gray-800 rounded overflow-hidden hover:shadow-lg hover:scale-[1.02] transition">
+            <a href="deepcontainment.html" class="glow-card block bg-gray-800 rounded overflow-hidden">
                 <img src="ss6.PNG" alt="Deep Containment" class="w-full h-48 object-cover">
                 <div class="p-4">
                     <h3 class="text-xl font-semibold">Deep Containment</h3>
@@ -53,7 +74,7 @@
                 </div>
             </a>
 
-            <a href="trotrivia.html" class="block bg-gray-800 rounded overflow-hidden hover:shadow-lg hover:scale-[1.02] transition">
+            <a href="trotrivia.html" class="glow-card block bg-gray-800 rounded overflow-hidden">
                 <img src="ss9.png" alt="TroTrivia" class="w-full h-48 object-cover">
                 <div class="p-4">
                     <h3 class="text-xl font-semibold">TroTrivia</h3>
@@ -61,7 +82,7 @@
                 </div>
             </a>
 
-            <a href="arthouse.html" class="block bg-gray-800 rounded overflow-hidden hover:shadow-lg hover:scale-[1.02] transition">
+            <a href="arthouse.html" class="glow-card block bg-gray-800 rounded overflow-hidden">
                 <img src="ss8.jpg" alt="Art House" class="w-full h-48 object-cover">
                 <div class="p-4">
                     <h3 class="text-xl font-semibold">Art House</h3>
@@ -74,7 +95,7 @@
 
     <!-- Footer -->
     <footer class="text-center py-6 border-t border-gray-700 text-sm text-gray-500">
-        &copy; 2025 Jason Platte. All rights reserved.
+        &copy; 2026 Jason Platte. All rights reserved.
     </footer>
 
 </body>
