--- a/trotrivia.html
+++ b/trotrivia.html
@@ -10,6 +10,10 @@
         body {
             font-family: 'Inter', sans-serif;
         }
+        .nav-glow:hover {
+            text-shadow: 0 0 12px rgba(52, 211, 153, 0.6);
+            color: white;
+        }
     </style>
 </head>
 <body class="bg-black text-white">
@@ -17,9 +21,9 @@
     <header class="py-8 text-center" style="background-color: #202123;">
         <h1 class="text-2xl font-extrabold tracking-wide">Jason Platte</h1>
         <nav class="mt-4 flex justify-center space-x-8 text-4xl text-gray-500">
-            <a href="index.html" class="hover:text-white">Games</a>
-            <a href="code.html" class="hover:text-white">Code</a>
-            <a href="about.html" class="hover:text-white">About</a>
+            <a href="index.html" class="nav-glow">Games</a>
+            <a href="code.html" class="nav-glow">Code</a>
+            <a href="about.html" class="nav-glow">About</a>
         </nav>
     </header>
 
